--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ name: jpskenn on GitHub
 markdown: kramdown
 permalink: /blog/:year/:month/:day/:title
 
-theme: jekyll-theme-slate
+theme: jekyll-theme-cayman
