--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,6 @@ markdown: kramdown
 permalink: /blog/:year/:month/:day/:title
 
 theme: jekyll-theme-cayman
+
+future: false           # 未来日付の投稿を公開しない
+timezone: Asia/Tokyo    # 日付の基準となるタイムゾーンを指定
